1. Added Bootstrap-Table and implmented it into the Admin control page. 2. Added the ability to create/delete Roles and had it be able to use a modal popup for creating than going to another page. 3. Added javascript functions for managing our Bootstrap-Tables. 4. Implemented AJAX for posting multiple Role Deletion.

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -6,6 +6,7 @@
 
 @inject SignInManager<Rock_MarketUser> SignInManager
 @inject UserManager<Rock_MarketUser> UserManager
+@inject RoleManager<IdentityRole> RoleManager
 
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
@@ -22,7 +23,17 @@
                      alt="avatar image" id="login-avatar">
             </a>
             <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary">
+                @{var userInfo = UserManager.GetUserAsync(User); }
+                @{var userRole = UserManager.GetRolesAsync(userInfo.Result);}
+
                 <a class="dropdown-item">@UserManager.GetUserName(User)</a>
+                @foreach (var role in userRole.Result)
+                {
+                    if (role == "Administrator")
+                    {
+                        <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="">Administrator Settings</a>
+                    }
+                }
                 <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile Settings</a>
                 <form id="logoutForm" class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                     <button id="logout" type="submit" class="dropdown-item">Logout</button>
