--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ListUserAndRoleViewModel
+﻿@model AdminToolsViewModel
 
 @{
     ViewData["Title"] = "Admin";
@@ -8,139 +8,254 @@
 @section sidebar {
     <partial name="_AdminSideBar.cshtml" />
 }
-
-
-<h1>All Users</h1>
-
-@if (Model.Users.Any())
-{
-    foreach (var user in Model.Users)
+<body onload="initTables()">
+</body>
+<div class="main-container">
+    <h1> All Users</h1>
+    @if (Model.Users.Any())
     {
-        <div class="card mb-3">
-            <div class="card-header">
-                User Id : @user.Id
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">
-                    @user.Email
-                </h5>
-                @if (user.Roles.Any())
+        <table id="userTable"
+               data-detail-view="true"
+               data-detail-formatter="UserDetailFormatter"
+               data-search="true">
+            <tbody>
+                @foreach (var user in Model.Users)
                 {
-                    foreach (var roles in user.Roles)
-                    {
-                        <h5 class="card-title">
-                            @roles
-                        </h5>
-                    }
+                    <tr>
+                        <td></td>
+                        <td>@user.Email</td>
+                        <td>@user.Id</td>
+                        <td>@user.FirstName</td>
+                        <td>@user.LastName</td>
+                        <td>@user.Phone</td>
+                        <td>@user.Address</td>
+                        <td>@user.City</td>
+                        <td>@user.State</td>
+                        @if (user.Roles.Any())
+                        {
+                            string listOfRoles = "";
+                            foreach (var role in user.Roles)
+                            {
+                                listOfRoles += role + " ";
+                            }
+                            <td>@listOfRoles</td>
+                        }
+                        else
+                        {
+                            <td>No Roles Found</td>
+                        }
+                        <td>
+                            <form method="post" asp-action="DeleteUser" asp-route-id="@user.Id">
+                                <a asp-action="EditUser" asp-controller="Admin" asp-route-id="@user.Id">
+                                    <i class="fas fa-edit"></i>
+                                </a>
+                                <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                            </form>
+                        </td>
+                    </tr>
                 }
-                else
-                {
-                    <h5 class="card-title">
-                        No Roles Found
-                    </h5>
-                }
-            </div>
-            <div class="card-footer">
-                <form method="post" asp-action="DeleteUser" asp-route-id="@user.Id">
-                    <a asp-action="EditUser" asp-controller="Admin" asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                </form>
-            </div>
-        </div>
+            </tbody>
+        </table>
     }
-}
-else
-{
-    <div class="card mb-3">
-        <div class="card-header"></div>
-        <div class="card-body">
-            <h5 class="card-title">
-                No User Found
-            </h5>
-        </div>
-        <div class="card-footer">
-            <a asp-action="EditUser" asp-controller="Admin" class="btn btn-primary">Add Roles</a>
+    else
+    {
+        <h2>No Users Found</h2>
+    }
+    <br />
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createUserModal">
+        Create Users
+    </button>
+    <input type="submit" id="btnDeleteRoles" class="btn btn-danger" value="Delete User(s)">
+    <br />
+    <br />
+
+
+    <!--Popup modal for creating a new user-->
+    <div class="modal fade" id="createUserModal" tabindex="-1" role="dialog" aria-labelledby="createUserModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="createUserModalLabel">Create a New User</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!--Form submission for POST of creating a role to our Admin controller-->
+                    <form asp-action="CreateUserIndex" method="post" class="mt-3">
+                        <div asp-validation-summary="All" class="text-danger">
+                        </div>
+                        <div class="form-group row">
+                            <label asp-for="createRole.RoleName" class="col-sm-2 col-form-label"></label>
+                            <div class="col-sm-10">
+                                <input asp-for="createRole.RoleName" class="form-control" placeholder="Name">
+                                <span asp-validation-for="createRole.RoleName" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary" style="width:auto">Create Role</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-}
+
+    <h1>All Roles</h1>
+    @if (Model.Roles.Any())
+    {
+        <table id="roleTable">
+            <tbody>
+                @foreach (var role in Model.Roles)
+                {
+                    <tr>
+                        <td></td>
+                        <td>@role.Name</td>
+                        <td>@role.Id</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <h2>No Roles Found</h2>
+    }
+    <br />
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createRoleModal">
+        Create Roles
+    </button>
+    <input type="submit" id="btnDeleteRoles" class="btn btn-danger" value="Delete Role(s)">
+
+    <!--Popup modal for creating a new role-->
+    <div class="modal fade" id="createRoleModal" tabindex="-1" role="dialog" aria-labelledby="createRoleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="createRoleModalLabel">Create a New Role</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!--Form submission for POST of creating a role to our Admin controller-->
+                    <form asp-action="CreateRoleIndex" method="post" class="mt-3">
+                        <div asp-validation-summary="All" class="text-danger">
+                        </div>
+                        <div class="form-group row">
+                            <label asp-for="createRole.RoleName" class="col-sm-2 col-form-label"></label>
+                            <div class="col-sm-10">
+                                <input asp-for="createRole.RoleName" class="form-control" placeholder="Name">
+                                <span asp-validation-for="createRole.RoleName" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary" style="width:auto">Create Role</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    var model = JSON.parse('@Html.Raw(Json.Serialize(Model))');
+</script>
 
 
-<h1>All Roles</h1>
-@if (Model.Roless.Any())
-{
-    <div class="card mb-3">
-        <div class="card-header"></div>
-        <div class="card-body">
-            @foreach (var role in Model.Roless)
+
+@*<div class="main-container">
+        <h1>All Users</h1>
+
+            @if (Model.Users.Any())
             {
-                <h5 class="card-title">
-                    Role Name: @role.Name
-                </h5>
+                foreach (var user in Model.Users)
+                {
+                    <div class="card mb-3">
+                        <div class="card-header">
+                            User Id : @user.Id
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                @user.Email
+                            </h5>
+                            @if (user.Roles.Any())
+                            {
+                                foreach (var roles in user.Roles)
+                                {
+                                    <h5 class="card-title">
+                                        @roles
+                                    </h5>
+                                }
+                            }
+                            else
+                            {
+                                <h5 class="card-title">
+                                    No Roles Found
+                                </h5>
+                            }
+                        </div>
+                        <div class="card-footer">
+                            <form method="post" asp-action="DeleteUser" asp-route-id="@user.Id">
+                                <a asp-action="EditUser" asp-controller="Admin" asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
+                                <button type="submit" class="btn btn-danger">Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                }
             }
-        </div>
-        <div class="card-footer">
-            <a asp-action="CreateRole" asp-controller="Admin" class="btn btn-primary">Create Roles</a>
-            <a asp-action="EditUser" asp-controller="Admin" class="btn btn-danger">Delete Roles</a>
-        </div>
-    </div>
-}
-else
-{
-    <div class="card mb-3">
-        <div class="card-header"></div>
-        <div class="card-body">
-            <h5 class="card-title">
-                No Roles Found
-            </h5>
-        </div>
-        <div class="card-footer">
-            <a asp-action="CreateRole" asp-controller="Admin" class="btn btn-primary">Create Roles</a>
-            <a asp-action="EditUser" asp-controller="Admin" class="btn btn-primary">Delete Roles</a>
-        </div>
-    </div>
-}
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
+            else
+            {
+                <div class="card mb-3">
+                    <div class="card-header"></div>
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            No User Found
+                        </h5>
+                    </div>
+                    <div class="card-footer">
+                        <a asp-action="EditUser" asp-controller="Admin" class="btn btn-primary">Add Roles</a>
+                    </div>
+                </div>
+            }
 
+
+            <h1>All Roles</h1>
+            @if (Model.Roless.Any())
+            {
+                <div class="card mb-3">
+                    <div class="card-header"></div>
+                    <div class="card-body">
+                        @foreach (var role in Model.Roless)
+                        {
+                            <h5 class="card-title">
+                                Role Name: @role.Name
+                            </h5>
+                        }
+                    </div>
+                    <div class="card-footer">
+                        <a asp-action="CreateRole" asp-controller="Admin" class="btn btn-primary">Create Roles</a>
+                        <a asp-action="EditUser" asp-controller="Admin" class="btn btn-danger">Delete Roles</a>
+                    </div>
+                </div>
+            }
+            else
+            {
+                <div class="card mb-3">
+                    <div class="card-header"></div>
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            No Roles Found
+                        </h5>
+                    </div>
+                    <div class="card-footer">
+                        <a asp-action="CreateRole" asp-controller="Admin" class="btn btn-primary">Create Roles</a>
+                        <a asp-action="EditUser" asp-controller="Admin" class="btn btn-primary">Delete Roles</a>
+                    </div>
+                </div>
+            }
+    </div>*@
 
