--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -122,7 +122,7 @@
 
         .main-container .input-group input[type=text] {
             height: 60px;
-            background-color: rgba(0, 0, 0, .10);
+            background-color: rgb(36, 52, 68);
             border-color: rgba(0, 0, 0, .10);
             border-bottom-color: dimgrey;
             border-bottom-width: 6px;
@@ -134,7 +134,7 @@
 
 
         .main-container .input-group .input-group-append span {
-            background-color: rgba(0, 0, 0, .10);
+            background-color: rgb(36, 52, 68);
             border-color: green;
             border-bottom-color: green;
             border-bottom-width: 6px;
@@ -144,10 +144,15 @@
             font-weight: bold;
         }
 
-    .main-container input[type=tel], .main-container input[type=email], .main-container input[type=password] {
+    .main-container select option {
+        background-color: rgb(36, 52, 68);
+        color: white;
+    }
+
+    .main-container input[type=tel], .main-container input[type=email], .main-container input[type=password], .main-container input[type=text], .main-container select {
         height: 60px;
         width: 500px;
-        background-color: rgba(0, 0, 0, .10);
+        background-color: rgb(36, 52, 68);
         border-color: rgba(0, 0, 0, .10);
         border-bottom-color: dimgray;
         border-bottom-width: 6px;
@@ -157,15 +162,22 @@
         font-weight: bold;
     }
 
-        .main-container input[type=tel]:hover, .main-container input[type=email]:hover, .main-container input[type=password]:hover {
+        .main-container input[type=tel]:hover, .main-container input[type=email]:hover, .main-container input[type=password]:hover, .main-container input[type=text]:hover,
+        .main-container select:hover {
             border-bottom-color: dodgerblue;
         }
 
-        .main-container input[type=tel]:focus, .main-container input[type=email]:focus, .main-container input[type=password]:focus {
+        .main-container input[type=tel]:focus, .main-container input[type=email]:focus, .main-container input[type=password]:focus, .main-container input[type=text]:focus,
+        .main-container select:focus {
+            background-color: rgb(36, 52, 68);
             border-bottom-color: dodgerblue;
             box-shadow: none;
+            color: white;
         }
 
+.modal-body {
+    color: white;
+}
 
 .modal-content {
     width: 800px;
@@ -218,6 +230,11 @@
 /***********************************************************************/
 /*IDs Start*/
 /***********************************************************************/
+#editUser-modal-content {
+    top: -15px;
+    left: -150px;
+}
+
 #layout-container {
     padding-top: 65px;
     min-height: 100%;
@@ -326,7 +343,7 @@
         background-color: rgb(0, 66, 128);
     }
 
-#main-btn-danger {
+#main-btn-danger, #btnDeleteUsers, #btnDeleteRoles {
     -moz-border-radius-topleft: 20px;
     -moz-border-radius-topright: 20px;
     -moz-border-radius-bottomright: 20px;
@@ -338,7 +355,7 @@
     text-decoration: none;
 }
 
-    #main-btn-danger:hover {
+    #main-btn-danger:hover, #btnDeleteUsers:hover, #btnDeleteRoles:hover {
         background-color: rgb(153, 0, 0);
     }
 
