1. Admin can now delete multiple users in the Admin Index page. 2. Update our css to not use IDs for our main-btns but to use a modified version of a class version. 3. Went back and updated all pages that used the main-btns ID instead of the class version.

--- a/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -40,7 +40,7 @@
                     <input asp-for="Input.NewEmail" class="form-control" placeholder="Email"/>
                     <span asp-validation-for="Input.NewEmail" class="text-danger"></span>
                 </div>
-                <button id="main-btn" type="submit" asp-page-handler="ChangeEmail" class="btn btn-link text-white">Change email</button>
+                <button type="submit" asp-page-handler="ChangeEmail" class="btn btn-link text-white main-btn">Change email</button>
             </form>
         </div>
     </div>
