--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -100,7 +100,7 @@
                     </select>
                     <span asp-validation-for="Input.State" class="text-danger"></span>
                 </div>
-                <button id="main-btn" type="submit" class="btn btn-link text-white">Save</button>
+                <button type="submit" class="btn btn-link text-white main-btn">Save</button>
             </form>
         </div>
     </div>
