--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -15,10 +15,10 @@
                 <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
             </p>
             <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-                <button class="btn btn-link text-white" id="main-btn" type="submit">Download</button>
+                <button class="btn btn-link text-white main-btn" type="submit">Download</button>
             </form>
             <p>
-                <a class="btn btn-link text-white" id="main-btn-danger" asp-page="DeletePersonalData">Delete</a>
+                <a class="btn btn-link text-white main-btn-danger" asp-page="DeletePersonalData">Delete</a>
             </p>
         </div>
     </div>
