--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -49,8 +49,11 @@
                         }
                         <td>
                             <button type="button" class="btn btn-link" data-toggle="modal" data-target="@("#editUserModal_" + counter)"><i class="fas fa-edit"></i></button>
+                            <form method="post" asp-action="DeleteUser" asp-controller="Admin" asp-route-id="@user.Id">
+                                <button type="submit" class="btn btn-link"><i class="fas fa-trash-alt"></i></button>
+                            </form>
 
-                            <!--Popup modal for creating a new user-->
+                            <!--Popup modal for editing a user-->
                             <div class="modal fade" id="@("editUserModal_" + counter)" tabindex="-1" role="dialog" aria-labelledby="@("editUserModal_" + counter)" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content" id="editUser-modal-content">
@@ -160,8 +163,8 @@
 
                                                         <div class="form-group row">
                                                             <div class="col-sm-10">
-                                                                <button id="main-btn" type="submit" class="btn btn-link text-white">Update</button>
-                                                                <button id="main-btn" asp-action="Index" class="btn btn-link text-white">Cancel</button>
+                                                                <button type="submit" class="btn btn-link text-white main-btn">Update</button>
+                                                                <button asp-action="Index" class="btn btn-link text-white main-btn-danger">Cancel</button>
                                                             </div>
                                                         </div>
                                                     </form>
@@ -172,12 +175,6 @@
                                 </div>
                             </div>
                             @{counter++;}
-                            @*<form method="post" asp-action="DeleteUser" asp-route-id="@user.Id">
-                                    <a asp-action="EditUser" asp-controller="Admin" asp-route-id="@user.Id">
-                                        <i class="fas fa-edit"></i>
-                                    </a>
-                                    <button type="submit" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
-                                </form>*@
                         </td>
                     </tr>
                 }
@@ -189,8 +186,8 @@
         <h2>No Users Found</h2>
     }
     <br />
-    <button id="main-btn" type="submit" class="btn btn-link text-white" data-toggle="modal" data-target="#createUserModal">Create New User</button>
-    <input type="submit" id="btnDeleteUsers" class="btn btn-danger" value="Delete User(s)">
+    <button type="submit" class="btn btn-link text-white main-btn" data-toggle="modal" data-target="#createUserModal">Create New User</button>
+    <input type="submit"  class="btn btn-danger main-btn-danger" value="Delete User(s)">
     <br />
     <br />
 
@@ -198,7 +195,7 @@
     <!--Popup modal for creating a new user-->
     <div class="modal fade" id="createUserModal" tabindex="-1" role="dialog" aria-labelledby="createUserModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <div class="modal-content" id="createUser-modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="createUserModalLabel">Create a New User</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -206,22 +203,93 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <!--Form submission for POST of creating a role to our Admin controller-->
-                    @*<form asp-action="CreateUserIndex" method="post" class="mt-3">
-                            <div asp-validation-summary="All" class="text-danger">
-                            </div>
-                            <div class="form-group row">
-                                <label asp-for="createRole.RoleName" class="col-sm-2 col-form-label"></label>
-                                <div class="col-sm-10">
-                                    <input asp-for="createRole.RoleName" class="form-control" placeholder="Name">
-                                    <span asp-validation-for="createRole.RoleName" class="text-danger"></span>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="submit" class="btn btn-primary" style="width:auto">Create Role</button>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            </div>
-                        </form>*@
+                    <form asp-action="CreateUserIndex" method="post" class="mt-3">
+                        <div class="form-group">
+                            <input asp-for="createUser.FirstName" value="" placeholder="First Name" class="form-control" />
+                            <span asp-validation-for="createUser.FirstName" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input asp-for="createUser.LastName" value="" placeholder="Last Name" class="form-control" />
+                            <span asp-validation-for="createUser.LastName" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input asp-for="createUser.Email" value="" placeholder="Email Address" class="form-control" />
+                            <span asp-validation-for="createUser.Email" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input asp-for="createUser.Password" value="" placeholder="Password" class="form-control" />
+                            <span asp-validation-for="createUser.Password" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input asp-for="createUser.ConfirmPassword" value="" placeholder="Confirm Password" class="form-control" />
+                            <span asp-validation-for="createUser.ConfirmPassword" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input asp-for="createUser.Address" value="" placeholder="Address" class="form-control" />
+                            <span asp-validation-for="createUser.Address" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input asp-for="createUser.City" value="" placeholder="City" class="form-control" />
+                            <span asp-validation-for="createUser.City" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <select asp-for="createUser.State" class="form-control">
+                                <option value="AL">Alabama</option>
+                                <option value="AK">Alaska</option>
+                                <option value="AZ">Arizona</option>
+                                <option value="AR">Arkansas</option>
+                                <option value="CA">California</option>
+                                <option value="CO">Colorado</option>
+                                <option value="CT">Connecticut</option>
+                                <option value="DE">Delaware</option>
+                                <option value="DC">District Of Columbia</option>
+                                <option value="FL">Florida</option>
+                                <option value="GA">Georgia</option>
+                                <option value="HI">Hawaii</option>
+                                <option value="ID">Idaho</option>
+                                <option value="IL">Illinois</option>
+                                <option value="IN">Indiana</option>
+                                <option value="IA">Iowa</option>
+                                <option value="KS">Kansas</option>
+                                <option value="KY">Kentucky</option>
+                                <option value="LA">Louisiana</option>
+                                <option value="ME">Maine</option>
+                                <option value="MD">Maryland</option>
+                                <option value="MA">Massachusetts</option>
+                                <option value="MI">Michigan</option>
+                                <option value="MN">Minnesota</option>
+                                <option value="MS">Mississippi</option>
+                                <option value="MO">Missouri</option>
+                                <option value="MT">Montana</option>
+                                <option value="NE">Nebraska</option>
+                                <option value="NV">Nevada</option>
+                                <option value="NH">New Hampshire</option>
+                                <option value="NJ">New Jersey</option>
+                                <option value="NM">New Mexico</option>
+                                <option value="NY">New York</option>
+                                <option value="NC">North Carolina</option>
+                                <option value="ND">North Dakota</option>
+                                <option value="OH">Ohio</option>
+                                <option value="OK">Oklahoma</option>
+                                <option value="OR">Oregon</option>
+                                <option value="PA">Pennsylvania</option>
+                                <option value="RI">Rhode Island</option>
+                                <option value="SC">South Carolina</option>
+                                <option value="SD">South Dakota</option>
+                                <option value="TN">Tennessee</option>
+                                <option value="TX">Texas</option>
+                                <option value="UT">Utah</option>
+                                <option value="VT">Vermont</option>
+                                <option value="VA">Virginia</option>
+                                <option value="WA">Washington</option>
+                                <option value="WV">West Virginia</option>
+                                <option value="WI">Wisconsin</option>
+                                <option value="WY">Wyoming</option>
+                            </select>
+                            <span asp-validation-for="createUser.State" class="text-danger"></span>
+                        </div>
+                        <button type="submit" class="btn btn-link text-white main-btn">Create</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -230,7 +298,8 @@
     <h1>All Roles</h1>
     @if (Model.Roles.Any())
     {
-        <table id="roleTable">
+        <table id="roleTable"
+               data-search="true">
             <tbody>
                 @foreach (var role in Model.Roles)
                 {
@@ -248,8 +317,8 @@
         <h2>No Roles Found</h2>
     }
     <br />
-    <button id="main-btn" type="submit" class="btn btn-link text-white" data-toggle="modal" data-target="#createRoleModal">Create New Role</button>
-    <input type="submit" id="btnDeleteRoles" class="btn btn-danger" value="Delete Role(s)">
+    <button type="submit" class="btn btn-link text-white main-btn" data-toggle="modal" data-target="#createRoleModal">Create New Role</button>
+    <input type="submit" id="btnDeleteRoles" class="btn btn-danger main-btn-danger" value="Delete Role(s)">
 
     <!--Popup modal for creating a new role-->
     <div class="modal fade" id="createRoleModal" tabindex="-1" role="dialog" aria-labelledby="createRoleModalLabel" aria-hidden="true">
@@ -274,8 +343,8 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button id="main-btn" type="submit" class="btn btn-link text-white">Create Role</button>
-                            <button id="main-btn" type="submit" class="btn btn-link text-white" data-dismiss="modal">Close</button>
+                            <button  type="submit" class="btn btn-link text-white main-btn">Create Role</button>
+                            <button  type="submit" class="btn btn-link text-white main-btn" data-dismiss="modal">Close</button>
                         </div>
                     </form>
                 </div>
