1. Added the feature for users to be locked out after multiple failed logins. 2. Added the feature for the admins to be able to lock/unlock accounts. 3. Began adding Store Item Database.

--- a/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -2,6 +2,7 @@
 @model LockoutModel
 @{
     ViewData["Title"] = "Locked out";
+    Layout = "~/Areas/Identity/Pages/_AuthLayout.cshtml";
 }
 
 <header>
