--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -34,6 +34,9 @@
                         <td>@user.Address</td>
                         <td>@user.City</td>
                         <td>@user.State</td>
+                        <td>@user.LockoutEnabled</td>
+                        <td>@user.AccessFailedCount</td>
+                        <td>@user.LockoutEnd</td>
                         @if (user.Roles.Any())
                         {
                             string listOfRoles = "";
@@ -158,13 +161,26 @@
                                                             </select>
                                                             <span asp-validation-for="@Model.Users[counter].State" class="text-danger" hidden></span>
                                                         </div>
-
-                                                        <div asp-validation-summary="All" class="text-danger"></div>
+                                                        <div class="form-group">
+                                                            <label asp-for="@Model.Users[counter].LockoutEnabled"></label>
+                                                            <input asp-for="@Model.Users[counter].LockoutEnabled" class="form-control">
+                                                            <span asp-validation-for="@Model.Users[counter].LockoutEnabled" class="text-danger" hidden></span>
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label asp-for="@Model.Users[counter].AccessFailedCount"></label>
+                                                            <input asp-for="@Model.Users[counter].AccessFailedCount" class="form-control">
+                                                            <span asp-validation-for="@Model.Users[counter].AccessFailedCount" class="text-danger" hidden></span>
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label asp-for="@Model.Users[counter].LockoutEnd"></label>
+                                                            <input asp-for="@Model.Users[counter].LockoutEnd" class="form-control" type="datetime-local">
+                                                            <span asp-validation-for="@Model.Users[counter].LockoutEnd" class="text-danger" hidden></span>
+                                                        </div>
 
                                                         <div class="form-group row">
                                                             <div class="col-sm-10">
                                                                 <button type="submit" class="btn btn-link text-white main-btn">Update</button>
-                                                                <button asp-action="Index" class="btn btn-link text-white main-btn-danger">Cancel</button>
+                                                                <button type="submit" class="btn btn-link text-white main-btn" data-dismiss="modal">Cancel</button>
                                                             </div>
                                                         </div>
                                                     </form>
@@ -187,7 +203,7 @@
     }
     <br />
     <button type="submit" class="btn btn-link text-white main-btn" data-toggle="modal" data-target="#createUserModal">Create New User</button>
-    <input type="submit"  class="btn btn-danger main-btn-danger" value="Delete User(s)">
+    <input type="submit" class="btn btn-danger main-btn-danger" id="btnDeleteUsers" value="Delete User(s)">
     <br />
     <br />
 
@@ -289,6 +305,7 @@
                             <span asp-validation-for="createUser.State" class="text-danger"></span>
                         </div>
                         <button type="submit" class="btn btn-link text-white main-btn">Create</button>
+                        <button type="submit" class="btn btn-link text-white main-btn" data-dismiss="modal">Cancel</button>
                     </form>
                 </div>
             </div>
@@ -343,8 +360,8 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button  type="submit" class="btn btn-link text-white main-btn">Create Role</button>
-                            <button  type="submit" class="btn btn-link text-white main-btn" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-link text-white main-btn">Create Role</button>
+                            <button type="submit" class="btn btn-link text-white main-btn" data-dismiss="modal">Cancel</button>
                         </div>
                     </form>
                 </div>
