--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,33 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="main-container">
+    <div class="text-center">
+        <h1 class="display-4">Under Construction</h1>
+        <p>This page will be used for info/advertisement of sales and specific products the website is selling/promoting</a>.</p>
+
+        @*<label for="img">Select image:</label>
+            <input type="file" id="img" name="img" accept="image/*">
+            <input type="submit">*@
+        <div id="page">
+            <div id="demo-basic">
+            </div>
+        </div>
+    </div>
 </div>
+
+<script>
+    //$(function () {
+    //    var basic = $('#demo-basic').croppie({
+    //        viewport: {
+    //            width: 150,
+    //            height: 200
+    //        }
+    //    });
+    //    basic.croppie('bind', {
+    //        url: 'https://i.imgur.com/xD9rzSt.jpg',
+    //        points: [77, 469, 280, 739]
+    //    });
+    //});
+    var spoon = 3;
+</script>
