--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -4,14 +4,37 @@
     ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
+@inject UserManager<Rock_MarketUser> UserManager
+@{var userInfo = UserManager.GetUserAsync(User);}
 
 <div class="main-container">
     <h2>@ViewData["Title"]</h2>
     <partial name="_StatusMessage" model="Model.StatusMessage" />
     <div class="row">
         <div class="col-md-6">
-            <form id="profile-form" method="post">
+            <form id="profile-form" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Input.ProfileImage"></label>
+                    <div class="profile-image-view">
+                        @if (!string.IsNullOrEmpty(userInfo.Result.ProfilePath))
+                        {
+                            var profilePath = @"~/images/User Profile Images/" + userInfo.Result.ProfilePath;
+                            <img src="~/images/User Profile Images/@userInfo.Result.ProfilePath"
+                                 class="rounded-circle z-depth-0"
+                                 alt="avatar image" id="login-avatar-profile-display"
+                                 style="height:200px; width:200px" />
+                        }
+                        else
+                        {
+                            <img src="~/images/User Profile Images/default_user_image.png"
+                                 class="rounded-circle z-depth-0"
+                                 alt="avatar image" id="login-avatar-profile-display"
+                                 style="height:200px; width:200px" />
+                        }
+                    </div>
+                    <input asp-for="Input.ProfileImage" class="form-control" accept="image/*" placeholder="Profile Image">
+                </div>
                 <div class="form-group">
                     <label asp-for="Username"></label>
                     <div class="input-group" id="input-locked-green">
